# libnbbt

./: .gitignore  CMakeLists.txt  README.md
include/nbbt/: Buffer.h  Client.h  Server.h  socket.h
src/: Buffer.cpp  Client.cpp  Server.cpp  log.cpp  log.h  socket.cpp  win32_utf8.cpp  win32_utf8.h
test/: CMakeLists.txt  test.cpp
